--- a/test/test_output_functions_ZZZ.c.in
+++ b/test/test_output_functions_ZZZ.c.in
@@ -69,220 +69,120 @@ void read_DBIG(DBIG_XXX A, char* string)
     BIG_XXX_dnorm(A);
 }
 
-// #if (CHOICE >= BN_CURVES)
 void read_FP2(FP2_YYY *fp2, char* stringx)
 {
     char *stringy, *end;
     BIG_XXX x,y;
-    FP_YYY fx,fy;
-    stringx++;
-    stringy = strchr(stringx,',');
+
+    stringy = strchr(++stringx,',');
     if (stringy == NULL)
     {
         printf("ERROR unexpected test vector\n");
         exit(EXIT_FAILURE);
     }
-    stringy[0] = '\0';
-    stringy++;
-    end = strchr(stringy,']');
+    *stringy = '\0';
+
+    end = strchr(++stringy,']');
     if (end == NULL)
     {
         printf("ERROR unexpected test vector\n");
         exit(EXIT_FAILURE);
     }
-    end[0] = '\0';
+    *end = '\0';
 
     read_BIG(x,stringx);
     read_BIG(y,stringy);
 
-    FP_YYY_nres(&fx,x);
-    FP_YYY_nres(&fy,y);
-
-    FP2_YYY_from_FPs(fp2,&fx,&fy);
+    FP2_YYY_from_BIGs(fp2,x,y);
 }
 
-void read_FP4(FP4_YYY *fp4, char* stringx1)
+void read_FP4(FP4_YYY *fp4, char* stringx)
 {
-    char *stringx2, *stringy1, *stringy2, *end;
-    BIG_XXX x1,x2,y1,y2;
+    char *stringy, *end;
     FP2_YYY x,y;
 
-    stringx1 += 2;
-    stringx2 = strchr(stringx1,',');
-    if (stringx2 == NULL)
+    stringy = strchr(++stringx,']');
+    if (stringy == NULL)
     {
         printf("ERROR unexpected test vector\n");
         exit(EXIT_FAILURE);
     }
-    stringx2[0] = '\0';
-    stringx2 ++;
-    stringy1 = strchr(stringx2,']');
-    if (stringy1 == NULL)
-    {
-        printf("ERROR unexpected test vector\n");
-        exit(EXIT_FAILURE);
-    }
-    stringy1[0] = '\0';
-    stringy1 += 3;
-    stringy2 = strchr(stringy1,',');
-    if (stringy2 == NULL)
-    {
-        printf("ERROR unexpected test vector\n");
-        exit(EXIT_FAILURE);
-    }
-    stringy2[0] = '\0';
-    stringy2++;
-    end = strchr(stringy2,']');
+    *(++stringy) = '\0';
+
+    end = strchr(++stringy,']');
     if (end == NULL)
     {
         printf("ERROR unexpected test vector\n");
         exit(EXIT_FAILURE);
     }
-    end[0] = '\0';
+    *(++end) = '\0';
 
-    read_BIG(x1,stringx1);
-    read_BIG(x2,stringx2);
-    read_BIG(y1,stringy1);
-    read_BIG(y2,stringy2);
-
-    FP2_YYY_from_BIGs(&x,x1,x2);
-    FP2_YYY_from_BIGs(&y,y1,y2);
+    read_FP2(&x,stringx);
+    read_FP2(&y,stringy);
 
     FP4_YYY_from_FP2s(fp4,&x,&y);
 }
 
 // Read a structure of the type [[[ax1,ax2],[ay1,ay2]],[[bx1,bx2],[by1,by2]],[[cx1,cx2],[cy1,cy2]]]
-void read_FP12(FP12_YYY *fp12, char *stringax1)
+void read_FP12(FP12_YYY *fp12, char *stringx)
 {
-    char *stringax2, *stringay1, *stringay2, *stringbx1, *stringbx2, *stringby1, *stringby2, *stringcx1, *stringcx2, *stringcy1, *stringcy2, *end;
-    BIG_XXX ax1,ax2,ay1,ay2,bx1,bx2,by1,by2,cx1,cx2,cy1,cy2;
-    FP2_YYY ax,ay,bx,by,cx,cy;
-    FP4_YYY a,b,c;
+    char *stringy, *stringz, *end;
+    FP4_YYY x,y,z;
 
-    stringax1 += 3;
-    stringax2 = strchr(stringax1,',');
-    if (stringax2 == NULL)
+    stringy = strchr(++stringx,']');
+    if (stringy == NULL)
     {
-        printf("ERROR unexpected test vector\n");
+        printf("ERROR unexpected test vector a\n");
         exit(EXIT_FAILURE);
     }
-    stringax2[0] = '\0';
-    stringax2++;
-    stringay1 = strchr(stringax2,']');
-    if (stringay1 == NULL)
+    stringy = strchr(++stringy,']');
+    if (stringy == NULL)
     {
-        printf("ERROR unexpected test vector\n");
+        printf("ERROR unexpected test vector b\n");
         exit(EXIT_FAILURE);
     }
-    stringay1[0] = '\0';
-    stringay1 += 3;
-    stringay2 = strchr(stringay1,',');
-    if (stringay2 == NULL)
+    stringy+=2;
+    *stringy = '\0';
+
+    stringz = strchr(++stringy,']');
+    if (stringz == NULL)
     {
-        printf("ERROR unexpected test vector\n");
+        printf("ERROR unexpected test vector c\n");
         exit(EXIT_FAILURE);
     }
-    stringay2[0] = '\0';
-    stringay2++;
-    stringbx1 = strchr(stringay2,']');
-    if (stringbx1 == NULL)
+    stringz = strchr(++stringz,']');
+    if (stringz == NULL)
     {
-        printf("ERROR unexpected test vector\n");
+        printf("ERROR unexpected test vector d\n");
         exit(EXIT_FAILURE);
     }
-    stringbx1[0] = '\0';
-    stringbx1 += 5;
-    stringbx2 = strchr(stringbx1,',');
-    if (stringbx2 == NULL)
-    {
-        printf("ERROR unexpected test vector\n");
-        exit(EXIT_FAILURE);
-    }
-    stringbx2[0] = '\0';
-    stringbx2++;
-    stringby1 = strchr(stringbx2,']');
-    if (stringay1 == NULL)
-    {
-        printf("ERROR unexpected test vector\n");
-        exit(EXIT_FAILURE);
-    }
-    stringby1[0] = '\0';
-    stringby1 += 3;
-    stringby2 = strchr(stringby1,',');
-    if (stringay2 == NULL)
-    {
-        printf("ERROR unexpected test vector\n");
-        exit(EXIT_FAILURE);
-    }
-    stringby2[0] = '\0';
-    stringby2++;
-    stringcx1 = strchr(stringby2,']');
-    if (stringcx1 == NULL)
-    {
-        printf("ERROR unexpected test vector\n");
-        exit(EXIT_FAILURE);
-    }
-    stringcx1[0] = '\0';
-    stringcx1 += 5;
-    stringcx2 = strchr(stringcx1,',');
-    if (stringcx2 == NULL)
-    {
-        printf("ERROR unexpected test vector\n");
-        exit(EXIT_FAILURE);
-    }
-    stringcx2[0] = '\0';
-    stringcx2++;
-    stringcy1 = strchr(stringcx2,']');
-    if (stringcy1 == NULL)
-    {
-        printf("ERROR unexpected test vector\n");
-        exit(EXIT_FAILURE);
-    }
-    stringcy1[0] = '\0';
-    stringcy1 += 3;
-    stringcy2 = strchr(stringcy1,',');
-    if (stringay2 == NULL)
-    {
-        printf("ERROR unexpected test vector\n");
-        exit(EXIT_FAILURE);
-    }
-    stringcy2[0] = '\0';
-    stringcy2++;
-    end = strchr(stringcy2,']');
+    stringz+=2;
+    *stringz = '\0';
+
+    end = strchr(++stringz,']');
     if (end == NULL)
     {
-        printf("ERROR unexpected test vector\n");
+        printf("ERROR unexpected test vector e\n");
         exit(EXIT_FAILURE);
     }
-    end[0] = '\0';
+    end = strchr(++end,']');
+    if (end == NULL)
+    {
+        printf("ERROR unexpected test vector f\n");
+        exit(EXIT_FAILURE);
+    }
+    end+=2;
+    *end = '\0';
 
-    read_BIG(ax1,stringax1);
-    read_BIG(ax2,stringax2);
-    read_BIG(ay1,stringay1);
-    read_BIG(ay2,stringay2);
-    read_BIG(bx1,stringbx1);
-    read_BIG(bx2,stringbx2);
-    read_BIG(by1,stringby1);
-    read_BIG(by2,stringby2);
-    read_BIG(cx1,stringcx1);
-    read_BIG(cx2,stringcx2);
-    read_BIG(cy1,stringcy1);
-    read_BIG(cy2,stringcy2);
+    read_FP4(&x,stringx);
+    read_FP4(&y,stringy);
+    read_FP4(&z,stringz);
 
-    FP2_YYY_from_BIGs(&ax,ax1,ax2);
-    FP2_YYY_from_BIGs(&ay,ay1,ay2);
-    FP2_YYY_from_BIGs(&bx,bx1,bx2);
-    FP2_YYY_from_BIGs(&by,by1,by2);
-    FP2_YYY_from_BIGs(&cx,cx1,cx2);
-    FP2_YYY_from_BIGs(&cy,cy1,cy2);
+    FP12_YYY_from_FP4s(fp12,&x,&y,&z);
 
-    FP4_YYY_from_FP2s(&a,&ax,&ay);
-    FP4_YYY_from_FP2s(&b,&bx,&by);
-    FP4_YYY_from_FP2s(&c,&cx,&cy);
-
-    FP12_YYY_from_FP4s(fp12,&a,&b,&c);
+    FP12_YYY_reduce(fp12);
+    FP12_YYY_norm(fp12);
 }
-// #endif
 
 int read_ECP(ECP_ZZZ *ecp, char* string)
 {
@@ -379,7 +279,7 @@ int main(int argc, char** argv)
         exit(EXIT_FAILURE);
     }
 
-    int fd, len, ch1 = 0, ch2 = 0, i=0;
+    int fd, len, ch1 = 0, ch2 = 0, i=0, done;
     fpos_t pos;
     FILE *testVectFile, *writtenFile;
 
@@ -444,6 +344,7 @@ int main(int argc, char** argv)
     while (fgets(line, LINE_LEN, testVectFile) != NULL)
     {
         i++;
+        done=0;
         if (!strncmp(line,  BIGline, strlen(BIGline)))
         {
             len = strlen(BIGline);
@@ -454,7 +355,8 @@ int main(int argc, char** argv)
             printf("\n");
             printf("%s",BIGrawline);
             BIG_XXX_rawoutput(big);
-            printf("\n\n");
+            printf("\n");
+            done = 1;
         }
         if (!strncmp(line,  DBIGline, strlen(DBIGline)))
         {
@@ -463,7 +365,8 @@ int main(int argc, char** argv)
             read_DBIG(dbig, linePtr);
             printf("%s",DBIGline);
             BIG_XXX_doutput(dbig);
-            printf("\n\n");
+            printf("\n");
+            done = 1;
         }
         if (!strncmp(line,  FPline, strlen(FPline)))
         {
@@ -476,22 +379,21 @@ int main(int argc, char** argv)
             printf("\n");
             printf("%s",FPrawline);
             FP_YYY_rawoutput(&fp);
-            printf("\n\n");
+            printf("\n");
+            done = 1;
         }
-// #if (CHOICE >= BN_CURVES)
         if (!strncmp(line,  FP2line, strlen(FP2line)))
         {
             len = strlen(FP2line);
             linePtr = line + len;
             read_FP2(&fp2,linePtr);
-            FP_YYY_reduce(&fp2.a);
-            FP_YYY_reduce(&fp2.b);
             printf("%s",FP2line);
             FP2_YYY_output(&fp2);
             printf("\n");
             printf("%s",FP2rawline);
             FP2_YYY_rawoutput(&fp2);
-            printf("\n\n");
+            printf("\n");
+            done = 1;
         }
         if (!strncmp(line,  FP4line, strlen(FP4line)))
         {
@@ -503,7 +405,8 @@ int main(int argc, char** argv)
             printf("\n");
             printf("%s",FP4rawline);
             FP4_YYY_rawoutput(&fp4);
-            printf("\n\n");
+            printf("\n");
+            done = 1;
         }
         if (!strncmp(line,  FP12line, strlen(FP12line)))
         {
@@ -512,9 +415,9 @@ int main(int argc, char** argv)
             read_FP12(&fp12,linePtr);
             printf("%s",FP12line);
             FP12_YYY_output(&fp12);
-            printf("\n\n");
+            printf("\n");
+            done = 1;
         }
-// #endif
         if (!strncmp(line,  ECPline, strlen(ECPline)))
         {
             len = strlen(ECPline);
@@ -532,9 +435,8 @@ int main(int argc, char** argv)
             ECP_ZZZ_output(&ecpinf);
             printf("%s",ECPinfxyzline);
             ECP_ZZZ_outputxyz(&ecpinf);
-            printf("\n");
+            done = 1;
         }
-// #if (CHOICE >= BN_CURVES)
         if (!strncmp(line,  ECP2line, strlen(ECP2line)))
         {
             len = strlen(ECP2line);
@@ -550,9 +452,8 @@ int main(int argc, char** argv)
             ECP2_ZZZ_output(&ecp2inf);
             printf("%s",ECP2infxyzline);
             ECP2_ZZZ_outputxyz(&ecp2inf);
-            printf("\n");
+            done = 1;
         }
-// #endif
         if (!strncmp(line,  OCTline, strlen(OCTline)))
         {
             len = strlen(OCTline);
@@ -560,18 +461,30 @@ int main(int argc, char** argv)
             read_OCT(&oct,linePtr,strlen(linePtr));
             printf("%s",OCTline);
             OCT_output(&oct);
-            //printf("%s",OCTstringline);
-            //OCT_output_string(&oct);
-            //printf("\n");
+            done = 1;
         }
         if (!strncmp(line,  HEXline, strlen(HEXline)))
         {
             len = strlen(HEXline);
             linePtr = line + len;
             amcl_hex2bin(linePtr, bin, 64);
-            printf("\n%s", HEXline);
+            printf("%s", HEXline);
             amcl_print_hex(bin,32);
+            done = 1;
         }
+        if (!strncmp(line, BIGrawline, strlen(BIGrawline))||
+            !strncmp(line, FPrawline, strlen(FPrawline))||
+            !strncmp(line, ECPxyzline, strlen(ECPxyzline))||
+            !strncmp(line, ECPinfline, strlen(ECPinfline))||
+            !strncmp(line, ECPinfxyzline, strlen(ECPinfxyzline))||
+            !strncmp(line, FP2rawline, strlen(FP2rawline))||
+            !strncmp(line, FP4rawline, strlen(FP4rawline))||
+            !strncmp(line, ECP2xyzline, strlen(ECP2xyzline))||
+            !strncmp(line, ECP2infline, strlen(ECP2infline))||
+            !strncmp(line, ECP2infxyzline, strlen(ECP2infxyzline)))
+            done=1;
+        if(!done)
+            printf("%s",line);
     }
 
     // Restore stdout
